# django-gentelella-cookiecutter

./: .env.example  .gitignore  .gitmodules  LICENSE  README.md  cookiecutter.json
apps/: urls.py
project_name/: settings.py  urls.py
templates/auth/: login.html
{{ cookiecutter.project_name }}/: asgi.py  settings.py  urls.py  wsgi.py
{{cookiecutter.project_slug}}/: .env.example  .gitmodules  README.md  pyproject.toml
{{cookiecutter.project_slug}}/apps/: urls.py
{{cookiecutter.project_slug}}/apps/{{cookiecutter.app_title}}/: admin.py  apps.py  urls.py
{{cookiecutter.project_slug}}/apps/{{cookiecutter.app_title}}/models/: {{cookiecutter.app_class_name}}.py
{{cookiecutter.project_slug}}/apps/{{cookiecutter.app_title}}/tests/: __init__.py  {{cookiecutter.app_class_name}}_test.py
{{cookiecutter.project_slug}}/apps/{{cookiecutter.app_title}}/views/: __init__.py  {{cookiecutter.app_class_name}}_view.py
{{cookiecutter.project_slug}}/templates/base/: base_site.html  footer.html  sidebar.html  top_navigation.html
{{cookiecutter.project_slug}}/templates/erros/: page_404.html
{{cookiecutter.project_slug}}/templates/utils/: chartjs.html  chartjs2.html  contacts.html  fixed_footer.html  fixed_sidebar.html  form_buttons.html  form_upload.html  form_validation.html  form_wizards.html  general_elements.html  glyphicons.html  index2.html  index3.html  level2.html  media_gallery.html  plain_page.html  pricing_tables.html  tables_dynamic.html  widgets.html
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: asgi.py  settings.py  urls.py  wsgi.py
(+19 files in other folders)
