[tool.poetry]
name = "django-gentelella-cookiecutter"
version = "0.1.0"
description = ""
authors = ["talesmm14 <talesmelquiades@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.5"
django-environ = "^0.8.1"
django-crispy-forms = "^1.14.0"

[tool.poetry.dev-dependencies]
cookiecutter = "^2.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
